load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application", "macos_dynamic_framework")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:versioning.bzl", "apple_bundle_version")
load(
    "@build_bazel_rules_apple//apple:resources.bzl",
    # "apple_resource_bundle",
    "apple_resource_group",
)

apple_bundle_version(
    name = "Version",
    build_version = "123.4.5",
    short_version_string = "123.4",
    visibility = ["//:__subpackages__"],
)

macos_application(
    name = "LunarBarMac",
    app_icons = glob(["Resources/Assets.xcassets/AppIcon.appiconset/**"]),
    bundle_id = "top.siunim.LunarBarMac",
    bundle_name = "LunarBar",
    # frameworks = [
    #     ":macOSLib.framework",
    # ],
    infoplists = [":Info.plist"],
    minimum_os_version = "14.0",
    resources = [":ResourceGroup"],

    version = ":Version",
    visibility = [
        "//:__subpackages__",
        "@rules_xcodeproj//xcodeproj:generated",
    ],
    deps = [":macOSApp.library"],
)
apple_resource_group(
    name = "ResourceGroup",
    resources = glob(
        [
            "Resources/Assets.xcassets/**",
            "Resources/Holidays/**",

        ],
        exclude = ["Resources/Assets.xcassets/AppIcon.appiconset/**"],
    ),
)

swift_library(
    name = "macOSApp.library",
    srcs = glob(["Sources/**/*.swift"]),
    # data = select({
    #     ":release_build": [],
    #     "//conditions:default": [":PreviewContent"],
    # }),
    module_name = "macOSAppLib",
    tags = ["manual"],
    deps = [
        # "//Lib",
        # "//macOSApp/third_party:ExampleFramework",
        "//LunarBarKit:LunarBarKit",
        "//LunarBarMac/Modules/Sources/AppKitControls:AppKitControls",
        "//LunarBarMac/Modules/Sources/AppKitExtensions:AppKitExtensions",
    ],
)
