load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load(
#     "@build_bazel_rules_apple//apple:resources.bzl",
#     "apple_resource_bundle",
# )

# load("//build-system/bazel-utils:plist_fragment.bzl",
#     "plist_fragment",
# )


swift_library(
    name = "AppKitExtensions",
    srcs = glob([
        "*.swift",
    ]),
    copts = [
        "-warnings-as-errors",
    ],
    # data = [":LunarBarKitBundle"],
    module_name = "AppKitExtensions",
    visibility = [
        "//visibility:public",
    ],
    deps = [

        # "//submodules/TelegramUI/Components/MultiAnimationRenderer:MultiAnimationRenderer",
    ],
)

# apple_resource_bundle(
#     name = "LunarBarKitBundle",
#     infoplists = [
#         ":LunarBarKitInfoPlist",
#     ],
#     resources = [
#         ":LunarBarKitResources",
#     ],
# )

# filegroup(
#     name = "LunarBarKitResources",
#     srcs = glob([
#         "Resources/**",
#     ]),
#     visibility = ["//visibility:public"],
# )

# plist_fragment(
#     name = "LunarBarKitInfoPlist",
#     extension = "plist",
#     template =
#     """
#     <key>CFBundleIdentifier</key>
#     <string>top.siunim.LunarBarKit</string>
#     <key>CFBundleDevelopmentRegion</key>
#     <string>en</string>
#     <key>CFBundleName</key>
#     <string>LunarBarKit</string>
#     """
# )